--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.2.8",
     "expo": "^52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -28,7 +29,7 @@
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
     "expo-maps": "^0.7.3",
-    "expo-router": "~4.0.17",
+    "expo-router": "^4.0.20",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
@@ -41,8 +42,10 @@
     "react-native-maps": "^1.18.0",
     "react-native-permissions": "^5.2.6",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
     "zustand": "^5.0.3"
