--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@gorhom/bottom-sheet": "^5.1.2",
     "@react-native-seoul/kakao-login": "^5.4.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/stack": "^7.2.10",
+    "@react-navigation/material-top-tabs": "^7.2.10",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.2.8",
     "expo": "^52.0.37",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.7",
@@ -43,11 +44,13 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.18.0",
+    "react-native-pager-view": "6.5.1",
     "react-native-permissions": "^5.2.6",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
+    "react-native-tab-view": "^4.0.10",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
