--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^8.2.0",
     "react-native-maps": "^1.18.0",
     "react-native-pager-view": "6.5.1",
     "react-native-permissions": "^5.2.6",
